<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".auth.login.SinginFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_180sdp"
        android:layout_marginTop="@dimen/_17sdp"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="Login"
        android:textColor="@color/white"
        android:textSize="@dimen/_17ssp"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:text="@string/login_sub_heading"
        android:textColor="@color/white"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/practice_et"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="@dimen/_17sdp"
        android:layout_marginEnd="@dimen/_17sdp"
        android:background="@drawable/edit_text_bg"
        android:layout_marginTop="@dimen/_17sdp"
        android:fontFamily="@font/montserrat_medium"
        android:hint="Practice: Refresh001"
        android:inputType="text"
        android:textColorHint="@color/white"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:layout_width="@dimen/_18sdp"
        android:layout_height="@dimen/_18sdp"
        android:src="@drawable/icons_lock"
        android:layout_marginEnd="@dimen/_17sdp"
        app:layout_constraintBottom_toBottomOf="@+id/practice_et"
        app:layout_constraintEnd_toEndOf="@+id/practice_et"
        app:layout_constraintTop_toTopOf="@+id/practice_et" />

    <EditText
        android:id="@+id/user_name_et"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="@dimen/_17sdp"
        android:layout_marginEnd="@dimen/_17sdp"
        android:background="@drawable/edit_text_bg"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/user_name"
        android:inputType="text"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/practice_et" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="@dimen/_17sdp"
        android:layout_marginEnd="@dimen/_17sdp"
        android:background="@drawable/edit_text_bg"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name_et" />

    <TextView
        android:id="@+id/forgot_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/forgot_your_password"
        android:textColor="@color/white"
        android:textSize="@dimen/_11ssp"
        android:padding="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="@+id/password_et"
        app:layout_constraintTop_toBottomOf="@+id/password_et" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_btn"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        android:backgroundTint="@color/main_blue"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/sign_in"
        android:layout_marginTop="@dimen/_17sdp"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="@+id/password_et"
        app:layout_constraintStart_toStartOf="@+id/password_et"
        app:layout_constraintTop_toBottomOf="@+id/forgot_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>